# axiom-memory

./: .gitignore  README.md  package.json  vercel.json
api/: waitlist.js
api/_lib/: auth.js
api/cli-auth/: poll.js
api/sync/: fetch.js  manifest.js  plan.js  upload.js
plugin/: README.md  pyproject.toml
plugin/src/axiom_memory/: auth.py  cli.py  config.py  sync.py
public/: index.html  robots.txt  sitemap.xml
supabase/migrations/: 0002_memory_files_and_cli_sessions.sql
