[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "axiom-memory"
version = "0.1.0"
description = "Claude Code memory that survives /compact and syncs across machines"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Axiom", email = "hello@axiommemory.dev" }]
keywords = ["claude-code", "mcp", "memory", "sync", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12",
  "httpx>=0.27",
  "rich>=13.7",
  "platformdirs>=4.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "respx>=0.21"]

[project.scripts]
axiom-memory = "axiom_memory.cli:app"

[project.urls]
Homepage = "https://axiommemory.dev"
Repository = "https://github.com/vdalhambra/axiom-memory"
Issues = "https://github.com/vdalhambra/axiom-memory/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/axiom_memory"]
